[gd_scene load_steps=11 format=3 uid="uid://ctmb84aff7y1u"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_ae5wc"]
[ext_resource type="Texture2D" uid="uid://dk8ojnbycqvh3" path="res://Assets/Player/Wheel.png" id="3_cd37b"]
[ext_resource type="Script" path="res://Player/Wheel.gd" id="3_yssa1"]
[ext_resource type="PackedScene" uid="uid://bixi67x2r0wwx" path="res://Dialog/Dialog.tscn" id="4_tw7ot"]
[ext_resource type="Texture2D" uid="uid://c2hhfh7vugkkf" path="res://Assets/Player/Body.png" id="6_g13yf"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_d2d77"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0lesl"]
radius = 224.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0wkj8"]
radius = 40.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hee8h"]
size = Vector2(16, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nsg0e"]
size = Vector2(64, 140)

[node name="Player" type="Node2D"]
script = ExtResource("1_ae5wc")

[node name="Wheel" type="RigidBody2D" parent="."]
mass = 20.0
physics_material_override = SubResource("PhysicsMaterial_d2d77")
continuous_cd = 2
max_contacts_reported = 4
contact_monitor = true
can_sleep = false
script = ExtResource("3_yssa1")

[node name="Area2D" type="Area2D" parent="Wheel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/Area2D"]
position = Vector2(0, -40)
shape = SubResource("CircleShape2D_0lesl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel"]
position = Vector2(0, -40)
shape = SubResource("CircleShape2D_0wkj8")

[node name="Sprite2D" type="Sprite2D" parent="Wheel"]
position = Vector2(0, -40)
texture = ExtResource("3_cd37b")

[node name="Body" type="RigidBody2D" parent="."]
center_of_mass_mode = 1
center_of_mass = Vector2(0, 10)
gravity_scale = 0.2
continuous_cd = 2
max_contacts_reported = 4
contact_monitor = true

[node name="Sprite2D" type="Sprite2D" parent="Body"]
position = Vector2(-8, -136)
texture = ExtResource("6_g13yf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2(0, -88)
shape = SubResource("RectangleShape2D_hee8h")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Body"]
position = Vector2(0, -192)
shape = SubResource("RectangleShape2D_nsg0e")

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2(0, -40)
node_a = NodePath("../Wheel")
node_b = NodePath("../Body")

[node name="DialogBubble" parent="." instance=ExtResource("4_tw7ot")]
position = Vector2(0, -360)

[node name="Body2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-8, -160)
texture = ExtResource("6_g13yf")

[connection signal="body_entered" from="Wheel" to="Wheel" method="_on_body_entered"]
[connection signal="body_entered" from="Wheel/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Wheel/Area2D" to="." method="_on_area_2d_body_exited"]
